--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-	font-family: 'Montserrat', sans-serif;
+body {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
-@media (min-width: 760px) {
-	* {
-		font-family: 'Montserrat', sans-serif;
-		scroll-behavior: smooth;
-		scroll-snap-type: y mandatory;
-	}
+code {
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
