--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+	--bg-gradient: linear-gradient(
+		45deg,
+		rgb(141, 255, 203),
+		rgb(120, 230, 255) 20%,
+		rgb(26, 15, 44),
+		rgb(13, 18, 49)
+	);
+	--glass-gradient: linear-gradient(
+		135deg,
+		rgba(255, 255, 255, 0.65),
+		rgba(255, 255, 255, 0.35),
+		rgba(66, 65, 77, 0.4) 65%
+	);
+}
+
 body {
 	margin: 0;
 	padding: 0;
@@ -13,7 +29,39 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-		monospace;
+.App {
+	background-image: var(--bg-gradient);
+	background-size: 500%;
+	background-position: left;
+	transition: background-position 0.3s;
+}
+
+.dark .App {
+	background-position: right;
+}
+
+.glass {
+	background-image: var(--glass-gradient);
+	background-size: 500%;
+	background-position: left;
+	backdrop-filter: blur(2rem);
+	transition: background-position 0.3s;
+}
+
+.dark .glass {
+	background-position: right;
+}
+
+.dark .glow {
+	-webkit-box-shadow: 0px 0px 21px 6px rgba(255, 255, 255, 0.2);
+	box-shadow: 0px 0px 21px 6px rgba(255, 255, 255, 0.2);
+}
+
+.bw-text {
+	color: black;
+	transition: color 0.5s;
+}
+
+.dark .bw-text {
+	color: white;
 }
