--- a/src/index.css
+++ b/src/index.css
@@ -53,15 +53,64 @@ body {
 }
 
 .dark .glow {
-	-webkit-box-shadow: 0px 0px 21px 6px rgba(255, 255, 255, 0.2);
-	box-shadow: 0px 0px 21px 6px rgba(255, 255, 255, 0.2);
+	-webkit-box-shadow: 0px 0px 12px 2px rgba(255, 255, 255, 0.2);
+	box-shadow: 0px 0px 12px 2px rgba(255, 255, 255, 0.2);
 }
 
 .bw-text {
 	color: black;
-	transition: color 0.5s;
+	transition: color 1s;
 }
 
 .dark .bw-text {
 	color: white;
+}
+
+.nav {
+	transition: all 0.3s;
+}
+
+.nav-item {
+	font-family: 'Montserrat', sans-serif;
+}
+
+.nav-item p {
+	transition: all 0.3s;
+}
+
+.nav-item.selected.hovering {
+	background: rgb(130, 174, 255);
+	background-size: 500%;
+	background-position: left;
+	transition: background 0.5s;
+}
+
+.dark .nav-item.selected.hovering {
+	background: rgb(23, 25, 66);
+	background-position: right;
+}
+
+.nav-icon {
+	color: black;
+	transition: color 0.3s;
+}
+
+.dark .nav-icon {
+	color: white;
+}
+
+.selected .nav-icon {
+	color: rgb(92, 136, 216);
+}
+
+.dark .selected .nav-icon {
+	color: rgb(90, 103, 201);
+}
+
+.selected .nav-icon.hovering {
+	color: rgb(46, 76, 129);
+}
+
+.dark .selected .nav-icon.hovering {
+	color: rgb(78, 89, 174);
 }
