--- a/src/index.css
+++ b/src/index.css
@@ -57,13 +57,31 @@ body {
 	box-shadow: 0px 0px 12px 2px rgba(255, 255, 255, 0.2);
 }
 
-.bw-text {
-	color: black;
-	transition: color 1s;
+.text-bw {
+	@apply text-black;
+	transition: color 0.3s;
 }
 
-.dark .bw-text {
-	color: white;
+.dark .text-bw {
+	@apply text-white;
+}
+
+.border-bw {
+	@apply border-black;
+	transition: border-color 0.3s;
+}
+
+.dark .border-bw {
+	@apply border-white;
+}
+
+.bg-bw {
+	@apply bg-black;
+	transition: background-color 0.3s;
+}
+
+.dark .bg-bw {
+	@apply bg-white;
 }
 
 .nav {
@@ -113,4 +131,12 @@ body {
 
 .dark .selected .nav-icon.hovering {
 	color: rgb(78, 89, 174);
+}
+
+#tsparticles {
+	visibility: hidden;
+}
+
+.dark #tsparticles {
+	visibility: visible;
 }
